<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    android:logo="@drawable/reva_banner_small"-->
    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/yellow"
        android:navigationIcon="@drawable/reva_banner_small"/>

    <LinearLayout
        android:id="@+id/topContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createProfileTitle"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:text="@string/CreateProfilePage_Title"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/createProfileNameInput"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="@dimen/edit_text_height"
            android:maxEms="20"
            android:layout_toRightOf="@+id/createProfileTitle"
            android:textColor="@color/black"
            android:hint="@string/CreateProfilePage_ProfileNameInput"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center"
            android:maxLines="1"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondFromTopContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topContainerView"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/autoApplyFilterLabel"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:text="@string/autoApplyFilterLabel"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:gravity="center"/>

        <ToggleButton
            android:id="@+id/autoApplyFilter"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="@dimen/button_height_small"
            android:layout_toRightOf="@+id/autoApplyFilterLabel"
            android:textColor="@color/black"
            android:background="@color/grey_cream"
            android:onClick="onToggleClicked"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seconFromBottomContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondFromTopContainerView"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ListView
            android:id="@+id/filterListView"
            android:background="@color/grey_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <ListView
            android:id="@+id/selectedFilterListView"
            android:background="@color/grey_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondFromBottomContainerView"
        android:orientation="vertical"
        android:layout_weight="0"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/CreateProfileButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_large"
            android:background="@color/grey"
            android:text="@string/CreateProfilePage_CreateBtn"
            android:textColor="@color/white"
            android:onClick="onSaveButtonClicked"/>

    </LinearLayout>

</LinearLayout>