...
    <string name="MainPage_Title">Revasolutions Capture Solution</string>
	<string name="MainPage_TakePicture">Take Picture</string>
    <string name="MainPage_TakeContinuousPictures">Take Continuous Pictures</string>
	<string name="MainPage_EnhanceImage">Enhance Image</string>
	<string name="MainPage_Settings">Settings</string>
	<string name="MainPage_Login">Re-Login</string>
	<string name="MainPage_Logout">Logout</string>
	<string name="MainPage_FileStackUpload">FileStackUpload(Static)</string>
    <string name="MainPage_CaptivaUpload">CaptivaUpload(Static)</string>
    <string name="MainPage_CreateFilterProfile">Create Filter Profile</string>
    <string name="MainPage_filterProfileSelections">Please select a filter profile</string>

    <string name="EnhanceImage_Title">Enhance Image</string>
    <string name="EnhanceImageCrop_Title">Crop Image</string>
    <string name="EnhanceImageQuadCrop_Title">Quad Crop Image</string>
...
    <string name="General_Done">Done</string>    
    <string name="General_Update">Update</string>
    <string name="Button_UndoAll">Undo All</string>
    <string name="Button_Upload">Upload Now</string>
    <string name="Button_CropSubmit">Submit Crop</string>
    <string name="Menu_ImageLabel">Image Label</string>
    <string name="Menu_BlackWhite">Black-White</string>
    <string name="Menu_Gray">Gray</string>
    <string name="Menu_Deskew">Deskew</string>
    <string name="Menu_RotateLeft">Rotate Left</string>
    <string name="Menu_RotateRight">Rotate Right</string>
    <string name="Menu_Crop">Crop</string>
    <string name="Menu_QuadCrop">Quadrilateral Crop</string>
...
