<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

<!--    android:logo="@drawable/reva_banner_small"-->
    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/yellow"
        android:navigationIcon="@drawable/reva_banner_small"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/orange_light"
        android:layout_below="@+id/toolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

            <Spinner
                android:id="@+id/filterSpinner"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height"
                android:background="@color/orange_light"
                android:textColor="@color/black"
                android:prompt="@string/mainPage_spinner_prompt" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/filterSpinner"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onLogin"
                android:padding="10dp"
                android:text="@string/MainPage_Login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/takepicturebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LoginButton"
                android:layout_marginTop="5dp"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onTakePicture"
                android:padding="10dp"
                android:text="@string/MainPage_TakePicture"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/takecontinuouspicturesbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/takepicturebtn"
                android:layout_marginTop="5dp"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onTakeContinuousPictures"
                android:padding="10dp"
                android:text="@string/MainPage_TakeContinuousPictures"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/enhancepicturebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/takecontinuouspicturesbtn"
                android:layout_marginTop="5dp"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onEnhanceImage"
                android:padding="10dp"
                android:text="@string/MainPage_EnhanceImage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/SettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enhancepicturebtn"
                android:layout_marginTop="5dp"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onSettings"
                android:padding="10dp"
                android:text="@string/MainPage_Settings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/CreateFilterProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SettingsButton"
                android:layout_marginTop="5dp"
                android:background="@drawable/orange_button"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center_vertical"
                android:onClick="onCreateFilterProfile"
                android:padding="10dp"
                android:text="@string/MainPage_CreateFilterProfile"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:background="@color/orange_dark"
        android:text="@string/AppCopyright"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>